--- a/apertium-kaz-tat/corpa/README
+++ b/apertium-kaz-tat/corpa/README
@@ -23,5 +23,5 @@ Basic workflow is like the following (IS talking to himself):
 	
 	repeat the cycle
 
-testcorpus.sh script in apertium-kaz-tat/ gives a coloured diff of "origina" and
+'qa.sh kaz-tat-corpus' in apertium-kaz-tat/ gives a coloured diff of "origina" and
 "nova" translations. 
