--- a/apertium-en-ca/dev/html-texts/README
+++ b/apertium-en-ca/dev/html-texts/README
@@ -1,2 +1,4 @@
-This directory contains valid HTML files found by Google Code-In 2013 student Andrei Barbu, which are translated into invalid HTML files by apertium-en-ca.
-Some of them have been removed as they are valid after Andrei's rule correction.:x
+This directory contains valid HTML files found by Google Code-In 2013
+students Andrei Barbu and DarkGaia, which are translated into invalid HTML
+files by apertium-en-ca.  Some of them have been removed as they are valid
+after Andrei's rule corrections.
