--- a/trunk/apertium-en-ca/dev/odt-tests/README
+++ b/trunk/apertium-en-ca/dev/odt-tests/README
@@ -10,3 +10,5 @@ transfer.
 
 The files have been produced by galaxyfeeder (Gabriel Esteban) during Google
 Code-In 2013
+
+Some files have been removed after DarkGaia has solved some of the problems.
