apertium pkgconfig fix; configure.in→configure.ac

--- a/apertium-tolk/README
+++ b/apertium-tolk/README
@@ -9,7 +9,8 @@ You need:
  
    $ sudo apt-get install python-dbus
 
-* Apertium-dbus 
+* apertium-dbus – if you are installing apertium-tolk from SVN, use
+  apertium-dbus from SVN, otherwise do:
 
    $ sudo apt-get install apertium-dbus
 
