set up a corpus test for tat>kaz direction

--- a/apertium-kaz-tat/corpa/README
+++ b/apertium-kaz-tat/corpa/README
@@ -1,27 +1,33 @@
 * corpus.kaz.txt
-	All stories and texts I have been working so far.
+	All Kazakh stories and texts I have been working so far.
 
-* corpus.kaz-tat.postedit.txt
-	The name explains what it is.
+* corpus.tat.txt
+	Postedited Tatar translation of the corpus.
 
-* origina_traduko.txt
+* kaz-tat-origina.txt
 	Translation of corpus.kaz.txt with the second to last revision of apertium-kaz-tat.
 
-* nova_traduko.txt
+* kaz-tat-nova.txt
 	Translation of corpus.kaz.txt with the last revision of apertium-kaz-tat.
 
+* tat-kaz-origina.txt
+	Translation of corpus.tat.txt with the second to last revision of apertium-kaz-tat.
+
+* tat-kaz-nova.txt
+	Translation of corpus.tat.txt with the last revision of apertium-kaz-tat.
 
 ------
 
 Basic workflow is like the following (IS talking to himself):
-	1) run diff on origina_traduko.txt and corpus.kaz-tat.postedit.txt,
+	1) run diff on kaz-tat-origina.txt and corpus.tat.txt,
 	2) see what is to fix/to improve,
-	3) fix them,
-	4) run testcorpus.sh to see whether you really fixed them,
+	3) fix them and compile,
+	4) run ./qa.sh kaz-tat-corp to see whether you really fixed them,
 	5) commit,
-	6) mv nova_traduko.txt origina_traduko.txt
+	6) mv kaz-tat-nova.txt kaz-tat-origina.txt
 	
 	repeat the cycle
 
-'qa.sh kaz-tat-corpus' in apertium-kaz-tat/ gives a coloured diff of "origina" and
-"nova" translations. 
+'qa.sh kaz-tat-corp' in apertium-kaz-tat/ gives a coloured diff of "origina" and "nova" translations.
+
+The same workflow applies for the opposite direction.
