--- a/trunk/lttoolbox/lttoolbox/lt-trim.1
+++ b/trunk/lttoolbox/lttoolbox/lt-trim.1
@@ -19,6 +19,9 @@ to the input side of bidix_binary (left-side when compiling lr,
 right-side when compiling rl), such that only analyses which would
 pass through `lt-proc -b bidix_binary' are kept.
 
+\fBWarning: this program is experimental!\fR It has been tested, but
+not deployed extensively yet.
+
 Both compund tags (`<compound-only-L>', `<compound-R>') and join
 elements (`<j/>' in XML, `+' in the stream) and the group element
 (`<g/>' in XML, `#' in the stream) should be handled correctly, even
