--- a/trunk/apertium-kaz-tat/paper/paper.tex
+++ b/trunk/apertium-kaz-tat/paper/paper.tex
@@ -783,18 +783,18 @@ Tatar has separate words for \eng{[physical] life} (гомер) and \eng{life [a
 \begin{table}[htbp]
 	\centering
 	\subfloat[Naïve coverage of the Kazakh-Tatar direction]{
-		\begin{tabular}{llrrr}
+		\begin{tabular}{lrrr}
 			\toprule
 			Corpus          & Tokens & Coverage & stdev\\
 			\midrule
 			RFERL 2010      & 3.2M   & 90.19\% & $\pm$ 0.23\% \\
 			RFERL 2012      & 2.9M   & 89.74\% & $\pm$ 0.59\% \\
-			Wikipedia       & 1.2M   & 80.75\% & $\pm$ 5.23\% \\
+			Wikipedia       & 18.2M   & 80.75\% & $\pm$ 5.23\% \\
 			\bottomrule
 		\end{tabular}
 	}\\
 	\subfloat[Naïve coverage of the Tatar-Kazakh direction]{
-		\begin{tabular}{llrrr}
+		\begin{tabular}{lrrr}
 			\toprule
 			Corpus          & Tokens & Coverage & stdev\\
 			\midrule
