+2 words and a minor fix

--- a/apertium-kaz-tat/corpa/README
+++ b/apertium-kaz-tat/corpa/README
@@ -31,3 +31,11 @@ Basic workflow is like the following (IS talking to himself):
 'qa.sh kaz-tat-corp' in apertium-kaz-tat/ gives a coloured diff of "origina" and "nova" translations.
 
 The same workflow applies for the opposite direction.
+
+------
+
+Some sentences were added to corpus.kaz.txt and corpus.tat.txt directly (they aren't in /texts).
+
+Sources of these sentences:
+
+http://www.azattyq.kz/archive/news/20140301/330/330.html?id=25281790
